--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title></title>
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src * data: gap: &apos;self&apos;; style-src 'self' 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval';">
+  <title>100</title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -21,7 +23,6 @@
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
-  <script src="js/services.js"></script>
 </head>
 <body ng-app="game100" ng-controller="MainCtrl">
 <ion-nav-view></ion-nav-view>
