--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/directives.js"></script>
 </head>
 <body ng-app="game100" ng-controller="MainCtrl">
 <ion-nav-view></ion-nav-view>
