--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: &apos;self&apos;; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src * &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;;">
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src * data: gap: &apos;self&apos;; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src * &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;;">
   <title>100</title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -31,5 +32,6 @@
 </head>
 <body ng-app="game100" ng-controller="MainCtrl">
 <ion-nav-view></ion-nav-view>
+<intro-help></intro-help>
 </body>
 </html>
